<resources>
    <!-- App strings -->
    <string name="app_name">Van de kaart</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- activity_info strings -->
    <string name="brewery_picture">Brewery picture</string>
    <string name="visited">Visited</string>
    <string name="my_comment">My comment about the brewery</string>
    <string name="save">Save</string>

    <!-- activity_log strings -->
    <string name="login">Log in</string>
    <string name="register">Need an account? Click to register</string>

    <!-- multiple use strings -->
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="freepik">Image designed by Freepik.com</string>
    <string name="search">Search</string>

    <!-- activity_my_acc strings -->
    <string name="visited_breweries">Here are your visited breweries. Click to go to one and hold to remove.</string>

    <!-- activity_register strings -->
    <string name="registerRegister">Register</string>
    <string name="confirm_passwordRegister">Confirm password</string>

    <!-- activity_search strings -->
    <string name="city">City</string>

    <!-- activity_splash strings -->
    <string name="title">Van de kaart</string>

    <!-- actionbar strings -->
    <string name="account">Account</string>
    <string name="sign_out">Sign out</string>

    <!-- infoactivity strings -->
    <string name="rate">Please rate before you save</string>
    <string name="saved">Saved</string>

    <!-- infoasynctask strings -->
    <string name="asking">Asking brewery for more information</string>

    <!-- loginactivity strings -->
    <string name="sign_in_failed">Failed to sign in, please try again</string>
    <string name="sign_in_successful">Successfully signed in</string>
    <string name="empty">Please fill in your email and password</string>

    <!-- mainactivity strings -->
    <string name="location">Please turn on location services</string>
    <string name="no_breweries">No breweries found in your locality</string>

    <!-- myaccactivity strings -->
    <string name="signed_out">Successfully signed out</string>
    <string name="hello">Hello,</string>
    <string name="dot">.</string>
    <string name="message">Are you sure you want to remove this brewery?</string>
    <string name="positive">Remove item</string>

    <!-- registeractivity strings -->
    <string name="registration_successful">Registration successful. Account created</string>
    <string name="different_passwords">You have entered two different passwords. Try again</string>
    <string name="too_short">Your password must be longer than 6 characters</string>

    <!-- searchactivity strings -->
    <string name="searching">Searching</string>

</resources>
